--- a/WebRoot/templates/prefs/Pages.template
+++ b/WebRoot/templates/prefs/Pages.template
@@ -614,35 +614,51 @@ and the container element is replaced with that control.
 		<$ } $>
 	<$ } $>
 
-	<$ if (data.isEnabled(ZmSetting.POP_ENABLED)) { $>
+	<$ if (data.isEnabled(ZmSetting.POP_ENABLED) || (data.isEnabled(ZmSetting.IMAP_ENABLED) && data.isEnabled(ZmSetting.CHANGE_USE_IMAP_ENABLED))) { $>
 		<div class='prefHeader'><$=ZmMsg.externalAccess$></div>
 		<table role="presentation" class='ZOptionsSectionTable' width=100%>
 			<tr>
 				<td class='ZOptionsSectionMain'>
 					<table role="presentation" width=100% class='ZPropertySheet' cellspacing='6'>
-						<tr>
-							<td class='ZOptionsLabel'><$=ZmMsg.externalAccessPop$></td>
-							<td></td>
-						</tr>
-						<tr><td colspan=2><hr></td></tr>
-						<tr>
-							<td class='ZOptionsLabelTop'><$=ZmMsg.downloadPop$></td>
-							<td class='ZOptionsField'>
-								<div id='${id}_POP_DOWNLOAD_SINCE' tabindex=0></div>
-								<div id='${id}_POP_DOWNLOAD_SINCE_VALUE'></div>
-							</td>
-						</tr>
-						<tr><td colspan=2>&nbsp;</td></tr>
-						<tr>
-							<td class='ZOptionsLabelTop'><$=ZmMsg.incomingPOPJunk$></td>
-							<td class='ZOptionsField'><div id='${id}_POP_INCLUDE_SPAM' tabindex=0></div></td>
-						</tr>
-						<tr><td colspan=2>&nbsp;</td></tr>
-						<tr>
-							<td class='ZOptionsLabelTop'><$=ZmMsg.incomingPOPDeleted$></td>
-							<td class='ZOptionsField'><div id='${id}_POP_DELETE_OPTION' tabindex=0></div></td>
-						</tr>
+						<$ if (data.isEnabled(ZmSetting.IMAP_ENABLED) && data.isEnabled(ZmSetting.CHANGE_USE_IMAP_ENABLED)) { $>
+							<tr>
+								<td class='ZOptionsLabel'><$=ZmMsg.imapAccessLabel$></td>
+								<td class='ZOptionsField'><div id='${id}_USE_IMAP' tabindex=0></div></td>
+							</tr>
+						<$ } $>
+						<$ if (data.isEnabled(ZmSetting.POP_ENABLED) && data.isEnabled(ZmSetting.CHANGE_USE_POP_ENABLED)) { $>
+							<tr>
+								<td class='ZOptionsLabel'><$=ZmMsg.popAccessLabel$></td>
+								<td class='ZOptionsField'><div id='${id}_USE_POP' tabindex=0></div></td>
+							</tr>
+						<$ } $>
 					</table>
+					<$ if (data.isEnabled(ZmSetting.POP_ENABLED)) { $>
+						<table role="presentation" width=100% class='ZPropertySheet' cellspacing='6'>
+							<tr>
+								<td class='ZOptionsLabel'><$=ZmMsg.externalAccessPop$></td>
+								<td></td>
+							</tr>
+							<tr><td colspan=2><hr></td></tr>
+							<tr>
+								<td class='ZOptionsLabelTop'><$=ZmMsg.downloadPop$></td>
+								<td class='ZOptionsField'>
+									<div id='${id}_POP_DOWNLOAD_SINCE' tabindex=0></div>
+									<div id='${id}_POP_DOWNLOAD_SINCE_VALUE'></div>
+								</td>
+							</tr>
+							<tr><td colspan=2>&nbsp;</td></tr>
+							<tr>
+								<td class='ZOptionsLabelTop'><$=ZmMsg.incomingPOPJunk$></td>
+								<td class='ZOptionsField'><div id='${id}_POP_INCLUDE_SPAM' tabindex=0></div></td>
+							</tr>
+							<tr><td colspan=2>&nbsp;</td></tr>
+							<tr>
+								<td class='ZOptionsLabelTop'><$=ZmMsg.incomingPOPDeleted$></td>
+								<td class='ZOptionsField'><div id='${id}_POP_DELETE_OPTION' tabindex=0></div></td>
+							</tr>
+						</table>
+					<$ } $>
 				</td>
 			</tr>
 		</table>
